Back-port alignment fix from 8856ace4457429c398c2478760b30ba72329fd18

--- a/src/views/Give/YieldRecipients.scss
+++ b/src/views/Give/YieldRecipients.scss
@@ -14,6 +14,7 @@
 
   .MuiTableRow-root {
     display: flex;
+    justify-content: space-between;
 
     .MuiTypography-body1 {
       margin-bottom: 0px;
